# freqtag_python

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
freqtag/: bslcorr.py  download_examples.py  freqtag_FFT.py  freqtag_FFT3D.py  freqtag_HILB.py  freqtag_pipeline_example1.py  freqtag_pipeline_example2.py  freqtag_regressionMAT.py  freqtag_simpleSNR.py  freqtag_slidewin.py
matlab/: bslcorr.m  freqtag_Tsquare.m  freqtag_pipeline_example1.m  freqtag_regressionMAT.m  freqtag_slidewin.m
python/: download_example_data.py  download_examples.py  freqtag_pipeline_example1.py
src/freqtag/: freqtag_FFT.py
tests/: test_download_examples.py  test_freqtag_FFT.py
