[metadata]
name = freqtag
version = 0.0.1a
author = Benjamin Velie
author_email = veliebm@gmail.com
description = The freqtag toolbox - now in Python!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/veliebm/freqtag_python
project_urls =
    Bug Tracker = https://github.com/veliebm/freqtag_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src